ecmascript/parser/tests/typescript-errors/tsc/es6/memberFunctionDeclarations/MemberFunctionDeclaration8_es6/input.ts.stderr
error: Unexpected character '¬'
 --> $DIR/tests/typescript-errors/tsc/es6/memberFunctionDeclarations/MemberFunctionDeclaration8_es6/input.ts:5:12
  |
5 |     if (a) ¬ * bar;
  |            ^

error[1109]: Expression expected
 --> $DIR/tests/typescript-errors/tsc/es6/memberFunctionDeclarations/MemberFunctionDeclaration8_es6/input.ts:5:14
  |
5 |     if (a) ¬ * bar;
  |              ^

